[gd_scene load_steps=12 format=3 uid="uid://bqduy4u8regjo"]

[ext_resource type="Script" path="res://Scripts/Temple_Scripts/MainPage.gd" id="1_n2wv5"]
[ext_resource type="Texture2D" uid="uid://dlwvyo6ejssc" path="res://Assets/Images/Resources/gold.png" id="2_2mha2"]
[ext_resource type="Script" path="res://Scripts/Temple_Scripts/ShopScript.gd" id="2_m5fe6"]
[ext_resource type="Texture2D" uid="uid://bav7b1tv76dwv" path="res://Assets/Images/Resources/stone.png" id="3_yti6q"]
[ext_resource type="Texture2D" uid="uid://ywre30ix5f7t" path="res://Assets/Images/Resources/wood.png" id="4_rq8w3"]
[ext_resource type="Script" path="res://Scripts/Temple_Scripts/PersonagemLoja.gd" id="5_1cq4t"]
[ext_resource type="Script" path="res://Scripts/Temple_Scripts/Mineração.gd" id="6_b0i47"]
[ext_resource type="PackedScene" uid="uid://12buwcnhifsh" path="res://Scenes/Temple/OpcaoUpgrade.tscn" id="7_ydes4"]
[ext_resource type="Texture2D" uid="uid://d0xhqa10j30ok" path="res://icon.png" id="8_l0soo"]
[ext_resource type="Texture2D" uid="uid://cg4c8qydgkpag" path="res://Assets/Images/HUD/hearth2.png" id="10_g6gdm"]
[ext_resource type="Script" path="res://Scripts/Temple_Scripts/Defender Point.gd" id="10_imkf7"]

[node name="Temple" type="Node2D"]
script = ExtResource("1_n2wv5")

[node name="BG" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -2.0
offset_right = 1029.0
offset_bottom = 604.0
color = Color(0.337255, 0.337255, 0.337255, 1)

[node name="MenuPrincipal" type="ColorRect" parent="BG"]
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 1034.0
offset_bottom = 40.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Labels" type="Node2D" parent="BG/MenuPrincipal"]

[node name="Ouro" type="Label" parent="BG/MenuPrincipal/Labels"]
offset_left = 790.0
offset_top = 10.0
offset_right = 830.0
offset_bottom = 33.0

[node name="Wood" type="Label" parent="BG/MenuPrincipal/Labels"]
offset_left = 867.0
offset_top = 10.0
offset_right = 907.0
offset_bottom = 33.0

[node name="Stone" type="Label" parent="BG/MenuPrincipal/Labels"]
offset_left = 955.0
offset_top = 10.0
offset_right = 995.0
offset_bottom = 33.0

[node name="Abas" type="Node2D" parent="BG/MenuPrincipal"]

[node name="Shop" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 21.0
offset_top = 7.0
offset_right = 103.0
offset_bottom = 38.0
text = "Shop"

[node name="Mineração" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 108.0
offset_top = 7.0
offset_right = 198.0
offset_bottom = 38.0
text = "Mineração"

[node name="Personagem" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 202.0
offset_top = 7.0
offset_right = 307.0
offset_bottom = 38.0
text = "Personagem"

[node name="Defender Point" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 311.0
offset_top = 7.0
offset_right = 436.0
offset_bottom = 38.0
text = "Defender Point"

[node name="SHOP" type="Node2D" parent="BG"]
position = Vector2(1, 0)
script = ExtResource("2_m5fe6")

[node name="LOJA" type="ColorRect" parent="BG/SHOP"]
offset_left = 5.0
offset_top = 43.0
offset_right = 855.0
offset_bottom = 273.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="ITEMS" type="ColorRect" parent="BG/SHOP"]
offset_left = 855.0
offset_top = 297.0
offset_right = 1033.0
offset_bottom = 605.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="Title" type="Label" parent="BG/SHOP/ITEMS"]
layout_mode = 0
offset_left = 70.0
offset_right = 114.0
offset_bottom = 26.0
text = "Items"

[node name="ScrollContainer" type="ScrollContainer" parent="BG/SHOP/ITEMS"]
layout_mode = 0
offset_left = 7.0
offset_top = 36.0
offset_right = 172.0
offset_bottom = 303.0

[node name="Itens" type="GridContainer" parent="BG/SHOP/ITEMS/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="STATUS" type="ColorRect" parent="BG/SHOP"]
offset_left = 855.0
offset_top = 41.0
offset_right = 1033.0
offset_bottom = 296.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="Title" type="Label" parent="BG/SHOP/STATUS"]
layout_mode = 0
offset_left = 73.0
offset_top = -1.0
offset_right = 113.0
offset_bottom = 25.0
text = "Stats"

[node name="Label" type="Label" parent="BG/SHOP/STATUS"]
layout_mode = 0
offset_left = 5.0
offset_top = 34.0
offset_right = 183.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 12
text = "Max HP:                                   0
Damage:                                  0
Speed:                                      0
Life Steal:                                0
Engineering:                           0
Range:                                     0"

[node name="MINHAS_COISAS___TROCA" type="Node2D" parent="BG/SHOP"]

[node name="MINHASCOISAS" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 5.0
offset_top = 275.0
offset_right = 855.0
offset_bottom = 605.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="BG/SHOP/MINHAS_COISAS___TROCA/MINHASCOISAS"]
layout_mode = 0
offset_left = 7.0
offset_right = 850.0
offset_bottom = 288.0

[node name="Itens" type="GridContainer" parent="BG/SHOP/MINHAS_COISAS___TROCA/MINHASCOISAS/ScrollContainer"]
layout_mode = 2
columns = 4

[node name="TROCA" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
visible = false
offset_left = 5.0
offset_top = 275.0
offset_right = 855.0
offset_bottom = 602.0
color = Color(0.517647, 0.517647, 0.517647, 1)

[node name="Gold trade" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 838.0
offset_bottom = 97.0
color = Color(0.589844, 0.589844, 0.589844, 1)

[node name="Trade20Stone" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Gold trade"]
layout_mode = 0
offset_left = 612.0
offset_top = 16.0
offset_right = 695.0
offset_bottom = 71.0
text = "1 GOLD
20 STONE"

[node name="Trade100Wood" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Gold trade"]
layout_mode = 0
offset_left = 702.0
offset_top = 16.0
offset_right = 794.0
offset_bottom = 71.0
text = "1 GOLD
100 WOOD"

[node name="Wood" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Gold trade"]
position = Vector2(72, 42)
scale = Vector2(4.4375, 4.6875)
texture = ExtResource("2_2mha2")

[node name="Stone Trade" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
layout_mode = 0
offset_left = 17.0
offset_top = 100.0
offset_right = 838.0
offset_bottom = 185.0
color = Color(0.589844, 0.589844, 0.589844, 1)

[node name="Trade1Gold" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Stone Trade"]
layout_mode = 0
offset_left = 612.0
offset_top = 16.0
offset_right = 695.0
offset_bottom = 71.0
text = "20 STONE
1 GOLD"

[node name="Trade50Wood" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Stone Trade"]
layout_mode = 0
offset_left = 702.0
offset_top = 16.0
offset_right = 794.0
offset_bottom = 71.0
text = "1 STONE
50 WOOD"

[node name="Wood" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Stone Trade"]
position = Vector2(72, 42)
scale = Vector2(4.4375, 4.6875)
texture = ExtResource("3_yti6q")

[node name="Wood Trade" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
layout_mode = 0
offset_left = 17.0
offset_top = 188.0
offset_right = 838.0
offset_bottom = 273.0
color = Color(0.589844, 0.589844, 0.589844, 1)

[node name="Wood" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Wood Trade"]
position = Vector2(72, 42)
scale = Vector2(4.4375, 4.6875)
texture = ExtResource("4_rq8w3")

[node name="TradeWood" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Wood Trade"]
layout_mode = 0
offset_left = 605.0
offset_top = 14.0
offset_right = 697.0
offset_bottom = 69.0
text = "100 WOOD
1 GOLD"

[node name="TradeWoodStone" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Wood Trade"]
layout_mode = 0
offset_left = 702.0
offset_top = 14.0
offset_right = 794.0
offset_bottom = 69.0
text = "50 WOOD
1 STONE"

[node name="MinhasCoisas" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 8.0
offset_top = 570.0
offset_right = 127.0
offset_bottom = 601.0
text = "Minhas Coisas"

[node name="Troca" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 132.0
offset_top = 570.0
offset_right = 222.0
offset_bottom = 601.0
text = "Troca"

[node name="Botoes" type="Node2D" parent="BG/SHOP"]

[node name="SCROLL1" type="TextureButton" parent="BG/SHOP/Botoes"]
offset_left = 10.0
offset_top = 90.0
offset_right = 220.0
offset_bottom = 215.0
ignore_texture_size = true
stretch_mode = 0

[node name="Text" type="Label" parent="BG/SHOP/Botoes/SCROLL1"]
layout_mode = 0
offset_left = 85.0
offset_top = 50.0
offset_right = 125.0
offset_bottom = 73.0

[node name="SCROLL2" type="TextureButton" parent="BG/SHOP/Botoes"]
offset_left = 223.0
offset_top = 90.0
offset_right = 433.0
offset_bottom = 215.0
ignore_texture_size = true
stretch_mode = 0

[node name="Text" type="Label" parent="BG/SHOP/Botoes/SCROLL2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 73.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="SCROLL3" type="TextureButton" parent="BG/SHOP/Botoes"]
offset_left = 432.0
offset_top = 90.0
offset_right = 642.0
offset_bottom = 215.0
ignore_texture_size = true
stretch_mode = 0

[node name="Text" type="Label" parent="BG/SHOP/Botoes/SCROLL3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 73.0

[node name="SCROLL4" type="TextureButton" parent="BG/SHOP/Botoes"]
offset_left = 642.0
offset_top = 90.0
offset_right = 852.0
offset_bottom = 215.0
ignore_texture_size = true
stretch_mode = 0

[node name="Text" type="Label" parent="BG/SHOP/Botoes/SCROLL4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 73.0

[node name="Mineração" type="Node2D" parent="BG"]
visible = false
script = ExtResource("6_b0i47")

[node name="Movimento" type="ColorRect" parent="BG/Mineração"]
offset_left = 23.0
offset_top = 79.0
offset_right = 788.0
offset_bottom = 235.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Movimento2" type="ColorRect" parent="BG/Mineração"]
offset_left = 23.0
offset_top = 240.0
offset_right = 788.0
offset_bottom = 396.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Movimento3" type="ColorRect" parent="BG/Mineração"]
offset_left = 23.0
offset_top = 401.0
offset_right = 788.0
offset_bottom = 557.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="STATUS" type="ColorRect" parent="BG/Mineração"]
offset_left = 802.0
offset_top = 39.0
offset_right = 1033.0
offset_bottom = 604.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="Title" type="Label" parent="BG/Mineração/STATUS"]
layout_mode = 0
offset_left = 97.0
offset_top = -1.0
offset_right = 137.0
offset_bottom = 25.0
text = "Status
"

[node name="POWER" type="Node2D" parent="BG/Mineração"]
position = Vector2(33, -30)

[node name="Level1" parent="BG/Mineração/POWER" instance=ExtResource("7_ydes4")]
position = Vector2(52, 131)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Power"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level2" parent="BG/Mineração/POWER" instance=ExtResource("7_ydes4")]
position = Vector2(219, 131)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Power"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level3" parent="BG/Mineração/POWER" instance=ExtResource("7_ydes4")]
position = Vector2(381, 131)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Power"
textura = ExtResource("8_l0soo")

[node name="Level4" parent="BG/Mineração/POWER" instance=ExtResource("7_ydes4")]
position = Vector2(541, 131)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Power"
textura = ExtResource("8_l0soo")

[node name="LUCK" type="Node2D" parent="BG/Mineração"]
position = Vector2(-2, -124)

[node name="Level1" parent="BG/Mineração/LUCK" instance=ExtResource("7_ydes4")]
position = Vector2(81, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Luck"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level2" parent="BG/Mineração/LUCK" instance=ExtResource("7_ydes4")]
position = Vector2(248, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Luck"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level3" parent="BG/Mineração/LUCK" instance=ExtResource("7_ydes4")]
position = Vector2(410, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Luck"
textura = ExtResource("8_l0soo")

[node name="Level4" parent="BG/Mineração/LUCK" instance=ExtResource("7_ydes4")]
position = Vector2(570, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "Luck"
textura = ExtResource("8_l0soo")

[node name="IDK" type="Node2D" parent="BG/Mineração"]
position = Vector2(3, 40)

[node name="Level1" parent="BG/Mineração/IDK" instance=ExtResource("7_ydes4")]
position = Vector2(81, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "IDK"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level2" parent="BG/Mineração/IDK" instance=ExtResource("7_ydes4")]
position = Vector2(248, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "IDK"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level3" parent="BG/Mineração/IDK" instance=ExtResource("7_ydes4")]
position = Vector2(410, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "IDK"
textura = ExtResource("8_l0soo")

[node name="Level4" parent="BG/Mineração/IDK" instance=ExtResource("7_ydes4")]
position = Vector2(570, 383)
scale = Vector2(2, 2)
areaUpgrades = 2
whatUpgrades = "IDK"
textura = ExtResource("8_l0soo")

[node name="Personagem" type="Node2D" parent="BG"]
visible = false
script = ExtResource("5_1cq4t")

[node name="ITEMS" type="ColorRect" parent="BG/Personagem"]
offset_left = 802.0
offset_top = 39.0
offset_right = 1033.0
offset_bottom = 604.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="Title" type="Label" parent="BG/Personagem/ITEMS"]
layout_mode = 0
offset_left = 90.0
offset_right = 139.0
offset_bottom = 26.0
text = "Status"

[node name="Movimento" type="ColorRect" parent="BG/Personagem"]
offset_left = 23.0
offset_top = 60.0
offset_right = 788.0
offset_bottom = 318.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Movimento" type="ColorRect" parent="BG/Personagem/Movimento"]
layout_mode = 0
offset_top = 262.0
offset_right = 765.0
offset_bottom = 520.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Level Attack" type="Node2D" parent="BG/Personagem"]
position = Vector2(27, 8)

[node name="Level1" parent="BG/Personagem/Level Attack" instance=ExtResource("7_ydes4")]
position = Vector2(64, 110)
scale = Vector2(2, 2)
whatUpgrades = "Attack"
valor = 5
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level2" parent="BG/Personagem/Level Attack" instance=ExtResource("7_ydes4")]
position = Vector2(231, 110)
scale = Vector2(2, 2)
whatUpgrades = "Attack"
valor = 10
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level3" parent="BG/Personagem/Level Attack" instance=ExtResource("7_ydes4")]
position = Vector2(393, 110)
scale = Vector2(2, 2)
whatUpgrades = "Attack"
valor = 15
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level4" parent="BG/Personagem/Level Attack" instance=ExtResource("7_ydes4")]
position = Vector2(553, 110)
scale = Vector2(2, 2)
whatUpgrades = "Attack"
valor = 20
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level Defesa" type="Node2D" parent="BG/Personagem"]

[node name="Level1" parent="BG/Personagem/Level Defesa" instance=ExtResource("7_ydes4")]
position = Vector2(98, 367)
scale = Vector2(2, 2)
whatUpgrades = "Defense"
valor = 5
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level2" parent="BG/Personagem/Level Defesa" instance=ExtResource("7_ydes4")]
position = Vector2(265, 367)
scale = Vector2(2, 2)
whatUpgrades = "Defense"
valor = 10
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level3" parent="BG/Personagem/Level Defesa" instance=ExtResource("7_ydes4")]
position = Vector2(427, 367)
scale = Vector2(2, 2)
whatUpgrades = "Defense"
valor = 15
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Level4" parent="BG/Personagem/Level Defesa" instance=ExtResource("7_ydes4")]
position = Vector2(587, 367)
scale = Vector2(2, 2)
whatUpgrades = "Defense"
valor = 20
textura = ExtResource("8_l0soo")
textura_disable = ExtResource("10_g6gdm")

[node name="Warning2" type="Button" parent="BG/Personagem"]
visible = false
offset_left = -42.0
offset_top = -17.0
offset_right = 1064.0
offset_bottom = 674.0
disabled = true

[node name="Background" type="ColorRect" parent="BG/Personagem/Warning2"]
layout_mode = 0
offset_left = 262.0
offset_top = 127.0
offset_right = 861.0
offset_bottom = 394.0
color = Color(0, 0, 0, 0.403922)

[node name="YES" type="Button" parent="BG/Personagem/Warning2/Background"]
layout_mode = 0
offset_left = 17.0
offset_top = 212.0
offset_right = 270.0
offset_bottom = 255.0
text = "SIM"

[node name="NOPE" type="Button" parent="BG/Personagem/Warning2/Background"]
layout_mode = 0
offset_left = 327.0
offset_top = 212.0
offset_right = 580.0
offset_bottom = 255.0
text = "NÃO"

[node name="Label" type="Label" parent="BG/Personagem/Warning2/Background"]
layout_mode = 0
offset_left = 130.0
offset_top = 116.0
offset_right = 473.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Tem certeza que quer evoluir esta habilidade?"

[node name="Defender Point" type="Node2D" parent="BG"]
visible = false
script = ExtResource("10_imkf7")

[node name="STATUS" type="ColorRect" parent="BG/Defender Point"]
offset_left = 802.0
offset_top = 39.0
offset_right = 1033.0
offset_bottom = 604.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="Title" type="Label" parent="BG/Defender Point/STATUS"]
layout_mode = 0
offset_left = 97.0
offset_top = -1.0
offset_right = 137.0
offset_bottom = 25.0
text = "Status
"

[node name="Movimento" type="ColorRect" parent="BG/Defender Point"]
offset_left = 23.0
offset_top = 60.0
offset_right = 788.0
offset_bottom = 318.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Movimento" type="ColorRect" parent="BG/Defender Point/Movimento"]
layout_mode = 0
offset_top = 262.0
offset_right = 765.0
offset_bottom = 520.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="MaxHP" type="Node2D" parent="BG/Defender Point"]
position = Vector2(27, 8)

[node name="Level1" parent="BG/Defender Point/MaxHP" instance=ExtResource("7_ydes4")]
position = Vector2(64, 110)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Heal Delay"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level2" parent="BG/Defender Point/MaxHP" instance=ExtResource("7_ydes4")]
position = Vector2(231, 110)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Heal Delay"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level3" parent="BG/Defender Point/MaxHP" instance=ExtResource("7_ydes4")]
position = Vector2(393, 110)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Heal Delay"
textura = ExtResource("8_l0soo")

[node name="Level4" parent="BG/Defender Point/MaxHP" instance=ExtResource("7_ydes4")]
position = Vector2(553, 110)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Heal Delay"
textura = ExtResource("8_l0soo")

[node name="Health Delay" type="Node2D" parent="BG/Defender Point"]

[node name="Level1" parent="BG/Defender Point/Health Delay" instance=ExtResource("7_ydes4")]
position = Vector2(98, 367)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Max HP"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level2" parent="BG/Defender Point/Health Delay" instance=ExtResource("7_ydes4")]
position = Vector2(265, 367)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Max HP"
valor = 2
textura = ExtResource("8_l0soo")

[node name="Level3" parent="BG/Defender Point/Health Delay" instance=ExtResource("7_ydes4")]
position = Vector2(427, 367)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Max HP"
valor = 4
textura = ExtResource("8_l0soo")

[node name="Level4" parent="BG/Defender Point/Health Delay" instance=ExtResource("7_ydes4")]
position = Vector2(587, 367)
scale = Vector2(2, 2)
areaUpgrades = 1
whatUpgrades = "Max HP"
valor = 5
textura = ExtResource("8_l0soo")

[node name="Warning" type="Button" parent="."]
visible = false
offset_left = -49.0
offset_top = -19.0
offset_right = 1057.0
offset_bottom = 672.0
disabled = true

[node name="Background" type="ColorRect" parent="Warning"]
layout_mode = 0
offset_left = 262.0
offset_top = 127.0
offset_right = 861.0
offset_bottom = 394.0
color = Color(0, 0, 0, 0.403922)

[node name="YES" type="Button" parent="Warning/Background"]
layout_mode = 0
offset_left = 17.0
offset_top = 212.0
offset_right = 270.0
offset_bottom = 255.0
text = "SIM"

[node name="NOPE" type="Button" parent="Warning/Background"]
layout_mode = 0
offset_left = 327.0
offset_top = 212.0
offset_right = 580.0
offset_bottom = 255.0
text = "NÃO"

[node name="Label" type="Label" parent="Warning/Background"]
layout_mode = 0
offset_left = 130.0
offset_top = 116.0
offset_right = 473.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Tem certeza que quer comprar este item?"

[connection signal="pressed" from="BG/MenuPrincipal/Abas/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Mineração" to="." method="_on_mineração_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Personagem" to="." method="_on_personagem_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Defender Point" to="." method="_on_defender_point_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Gold trade/Trade20Stone" to="BG/SHOP" method="_on_trade_20_stone_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Gold trade/Trade100Wood" to="BG/SHOP" method="_on_trade_100_wood_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Stone Trade/Trade1Gold" to="BG/SHOP" method="_on_trade_1_gold_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Stone Trade/Trade50Wood" to="BG/SHOP" method="_on_trade_50_wood_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Wood Trade/TradeWood" to="BG/SHOP" method="_on_trade_wood_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Wood Trade/TradeWoodStone" to="BG/SHOP" method="_on_trade_wood_stone_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/MinhasCoisas" to="BG/SHOP" method="_on_minhas_coisas_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/Troca" to="BG/SHOP" method="_on_troca_pressed"]
[connection signal="pressed" from="BG/SHOP/Botoes/SCROLL1" to="." method="_on_scroll_1_pressed"]
[connection signal="pressed" from="BG/SHOP/Botoes/SCROLL2" to="." method="_on_scroll_2_pressed"]
[connection signal="pressed" from="BG/Personagem/Warning2/Background/YES" to="BG/Personagem" method="_on_yes_pressed"]
[connection signal="pressed" from="BG/Personagem/Warning2/Background/NOPE" to="BG/Personagem" method="_on_nope_pressed"]
[connection signal="pressed" from="Warning/Background/YES" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Warning/Background/NOPE" to="." method="_on_nope_pressed"]
